Enable compiling and running preview features in Gradle